cargo-features = ["edition"]
[package]
edition = "2018"
name = "cjam"
license = "GPL-v3.0"
version = "0.1.0"
authors = ["mercury <udtrokia@gmail.com>"]
keywords = ["Cargo", "crate", "relative", "path"]
description = "Cargo Jam —— Resolve the relative pathes of cargo packages"

[dependencies]
regex = "1"