cargo-features = ["edition"]
[package]
edition = "2018"
name = "cjam"
license = "GPL-3.0-or-later"
version = "0.1.2"
authors = ["mercury <udtrokia@gmail.com>"]
keywords = ["Cargo", "crate", "relative", "path"]
readme = "./README.md"
repository = "https://github.com/udtrokia/cjam"
documentation = "https://docs.rs/cjam"
description = "Cargo Jam —— Resolve the relative paths of cargo packages"

[dependencies]
regex = "1"